--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,21 +1,59 @@
-h1 
+body
 {
+    background: #1e1f24;
+    color: #333;
     text-align: center;
-    color: rgb(47, 115, 124);
-    font-family:"Helvetica";
+    font-family: Arial;
+    font-size: 16px;
+    margin: 0;
+    padding: 0;
 }
-#theme
+
+#cabecera
 {
-    color:blue;
-    font-family:'Courier New', Courier, monospace;
+    background: #37488b;
+    box-shadow: 0px 2px 20px 0px rgba(0,0,0,0.5);
+    color: white;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5em;
 }
-#comment
+
+#cabecera #logo
 {
-    color:coral;
-    font-family:fantasy;
+    width: 20px;
+    vertical-align: middle;
 }
-#proof
+
+#cabecera #tagline
 {
-    color:rgb(52, 63, 73);
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    padding: 0 0 0 1em;
+    font-weight: normal;
+    font-size: 0.8em;
+}
+
+#container
+{
+    width: 70%;
+    padding: 0;
+    text-align: left;
+    border: 1px solid #DDD;
+    margin: 0 auto;
+}
+
+#container h1
+{
+    font-size: 20px;
+}
+#post
+{
+    background: white;
+    padding: 1em;
+}
+#footer
+{
+    background: #777;
+    color: white;
+    text-align: center;
+    padding: 0.5em;
 }
